--- a/style.css
+++ b/style.css
@@ -100,25 +100,54 @@ header {
 }
 
 .hero-container {
+    background-color: #f7f7f7;
     width: 100%;
-    height: 608px;
+    height: 558px;
     display: flex;
-    margin: 0px 64px;
-    border: 1px solid black;
+    padding: 0px 64px;
 }
 .main-hero {
-    border: 1px solid black;
     width: 710px;
-    height: 528;
+    height: 450px;
     position: relative;
+    margin: auto 0px;
 }
 .hero-img {
-    border: 1px solid black;
     width: 575px;
-    height: 608px;
+    height: 558px;
 
 }
-.hero-container img {
-    
-    border: 1px solid black;
+.hero-data {
+    position: absolute;
+    top: 107px;
+}
+.main-hero h1 {
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 52px;
+    color: rgb(51,51,51);
+}
+.hero-input {
+    background-color: white;
+    box-sizing: border-box;
+    width: 710px;
+    height: 80px;
+    border-radius: 5px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+.hero-input input {
+    width: 380px;
+    height: 48px;
+    padding: 12px 16px 12px 15px;
+    margin-left: 16px;
+    margin-top: 16px;
+    border-radius: 5px;
+}
+.hero-icon {
+    margin-left: 16px;
+    color: #9c205a;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 22px;
+    font-family: Arial, Helvetica, sans-serif;
 }
