--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ header {
 .hero-input {
     background-color: white;
     box-sizing: border-box;
-    width: 710px;
+    width: 700px;
     height: 80px;
     border-radius: 5px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -150,4 +150,24 @@ header {
     font-weight: 600;
     line-height: 22px;
     font-family: Arial, Helvetica, sans-serif;
+}
+.lcd-me {
+    color: #6B7680;
+}
+.hero-input button {
+    width: 90px;
+    height: 43px;
+    margin-left: 32px;
+    background-color:#e21b70;
+    color: white;
+    font-size: 14px;
+    border-radius: 5px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+}
+.hero-input button:hover {
+    background-color: #C21760;
+    transform: scale(1.1);
+    transition: .3s;
 }
