--- a/style.css
+++ b/style.css
@@ -171,3 +171,31 @@ header {
     transform: scale(1.1);
     transition: .3s;
 }
+.vendor-state {
+    width: 1440px;
+    height: 404px;
+    overflow: hidden;
+    position: relative;
+}
+.vendor-state img {
+    width: 1392px;
+}
+.vendor-text {
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 52px;
+    color: rgb(51,51,51);
+    margin-left: 64px;
+    padding: 64px 0px 0px 0px;
+}
+.abc {
+    position: absolute;
+    width: 650px;
+    height: 372px;
+    background-color: beige;
+    bottom: -110px;
+    left: 10px;
+    overflow: visible;
+}
