--- a/style.css
+++ b/style.css
@@ -174,11 +174,13 @@ header {
 .vendor-state {
     width: 1440px;
     height: 404px;
-    overflow: hidden;
     position: relative;
 }
 .vendor-state img {
-    width: 1392px;
+    width: 1400px;
+    height: 404px;
+    object-fit: cover;
+    object-position: center;
 }
 .vendor-text {
 
@@ -192,10 +194,12 @@ header {
 }
 .abc {
     position: absolute;
-    width: 650px;
-    height: 372px;
-    background-color: beige;
-    bottom: -110px;
-    left: 10px;
-    overflow: visible;
+    width: 590px;
+    height: 322px;
+    background-color: white;
+    bottom: -161px;
+    left: 64px;
+    border-radius: 10px;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;;
+
 }
