--- a/style.css
+++ b/style.css
@@ -264,7 +264,7 @@ Line-height: 24px;
     overflow: hidden;
     width: 313px;
     height: 222px;
-    background-color: pink;
+    background-color: gray;
     border: 1px solid #6B7680;
     border-radius:  15px;
 }
