--- a/style.css
+++ b/style.css
@@ -108,13 +108,13 @@ header {
 
 .hero-container {
     background-color: #f7f7f7;
-    width: 1519px;
+    width: 1455px;
     height: 558px;
     display: flex;
     padding-left: 128px;
 }
 .main-hero {
-    width: 710px;
+    width: 45%;
     height: 450px;
     position: relative;
     margin: auto 0px;
@@ -123,9 +123,10 @@ header {
     overflow: hidden;
     width: 815px;
     height: 558px;
+    margin-left: 128px;
 }
 .hero-img img {
-    width: 815px;
+    width: 55%px;
     height: 558px;
     object-fit: cover;
     object-position: center;
@@ -148,7 +149,6 @@ header {
     box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;}
 .hero-input input {
     border: 1px solid gray;
-
     width: 380px;
     height: 48px;
     padding: 12px 16px 12px 15px;
@@ -280,4 +280,38 @@ Line-height: 24px;
     Font-size: 32px;
     Font-weight: 600;
     Line-height: 32px;
+}
+
+.download-feed {
+    background-color: #e21b70;
+    width:1327px;
+    margin: 0px auto;
+    height: 336px;
+    border-radius: 15px;
+    display: flex;
+}
+.feed-text {
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 52px;
+    color: black;
+    margin-left: 128px;
+    padding: 80px 0px 0px 0px;
+}
+.feed-left {
+    width: 45%;
+    height: 200px;
+}
+.feed-right {
+    width: 55%;
+    height: 336px;
+    position: relative;
+}
+.feed-right img {
+    position: absolute;
+    width: 90%;
+    bottom: -96px;
+    left: 72px;
 }
