--- a/style.css
+++ b/style.css
@@ -289,6 +289,9 @@ Line-height: 24px;
     height: 336px;
     border-radius: 15px;
     display: flex;
+    /* justify-content: space-between; */
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .feed-text {
 
@@ -302,7 +305,10 @@ Line-height: 24px;
 }
 .feed-left {
     width: 45%;
-    height: 200px;
+    height: 336px;
+    box-sizing: border-box;
+    padding: 32px 128px 0px 32px;
+    font-size: 17px;
 }
 .feed-right {
     width: 55%;
@@ -314,4 +320,11 @@ Line-height: 24px;
     width: 90%;
     bottom: -96px;
     left: 72px;
+}
+.app-stores {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    width: 600px;
+    padding-top: 8px;
 }
